ros2_ws/Lab3_ws/log/build_2025-03-25_12-52-08/task_4/stderr.log
  File "/home/me597/me597-tgobel/ros2_ws/Lab3_ws/install/task_4/lib/python3.10/site-packages/task_4/auto_navigator.py", line 347
    ax.scatter(start[0], start[1], 'go', s = 100 label='Start')
                                             ^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?

